<resources>
    <string name="app_name">Afrikaburn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">info@afrikaburn.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_map">Map</string>
    <string name="menu_projects">Projects</string>
    <string name="menu_about">About</string>
    <string name="menu_event">About the event</string>
    <string name="menu_location">Afrikaburn location</string>

    <!--About-->
    <string name="version">App Version</string>
    <string name="images_headline">Images</string>
    <string name="images_instagram">Images used in the app are by @asterixorobelix</string>
    <string name="images_button">View on Instagram</string>
    <string name="rate_title">Rate this app</string>
    <string name="rate_body">You seem to like this app. Please rate the app in the Store!</string>
    <string name="rate_button">Rate!</string>

    <!--Projects-->
    <string name="projects_count_body">Projects listed this year.</string>
    <string name="project">Project</string>
    <string name="view_project_button_text">View project</string>

    <string name="mutant_vehicle_explanation">At AfrikaBurn a piece of mobile art is called a Mutant Vehicle and they can include motorised … anything, really. Cars, Bikes, Couches, Bars, Jellyfish. In order to drive your mutant vehicle, it has to be significantly modified – and licensed by the Department of Mutant Vehicles (the DMV). If your car looks like a car, and doesn’t invite participation, it won’t be allowed to drive around.</string>
    <string name="artwork_explanation">It is strongly encouraged to create art which can be dismantled and re-purposed (and not burnt). Anyone creating an artwork must take responsibility for all aspects of that creation. From filling out the art registration form, participating in dialogue with the Art Wranglers, arriving at Tankwa Town, protecting your art, lighting it, maintaining your artwork during the event and cleanup at the end.</string>
    <string name="theme_camp_explanation">Theme Camps are spaces where Collectives have dreamed up an idea for a gift, where people are invited to interact and engage in all manner of creative endeavour. From dance floors to spaces that offer pancakes and coffee, to tea and sympathy, body painting, libraries, post office services, roller discos, movie houses..</string>
    <string name="event_explanation">There are no headline acts at Afrikabun, and there’s no promotion of any artists billed to perform. All performers provide their art and skills as a gift to the community, for free. There’s also no main stage and side stages – but there are plenty of spaces to perform.</string>

    <!--ProjectDetail-->
    <string name="collective">Collective:</string>

    <!--Location-->
    <string name="location">Location</string>
    <string name="location_subtitle">Getting lost in the middle of nowhere is not fun.</string>
    <string name="location_title">Event Location</string>
    <string name="location_body">Afrikaburn is NOT in the Tankwa Karoo National Park!
        \n \nYou will lose cellphone reception while driving, so be sure to download an offline version of the route in Google Maps</string>
    <string name="location_map">View driving route on a map</string>

    <!--Event-->
    <string name="about_ab_title">About Afrikaburn</string>
    <string name="about_ab_body">
        AfrikaBurn is a community of participants who come together to create art, costume, performance, theme camps, music, mutant vehicles and much, much more. All of this is created through a volunteer and gifting culture.
        \nAfrika Burns Creative Projects (AfrikaBurn) was created in 2007 as a Not-For-Profit Company, with the intention that it would serve as a vehicle for the co-ordination of a South African Burning Man regional event.
        \nThe central icon and effigy of the event, the San Clan, is derived from an image found in San rock art in numerous locations in southern Africa, and symbolises a community as one. The design was created by Lil Black in 2006, ahead of the first event.
    </string>
    <string name="about_website_button_text">Afrikaburn website</string>

    <string name="about_theme_title">About this year\'s theme</string>
    <string name="about_theme_body">
        Once a year a city rises from the African dust – only it’s not a city, it’s an experiment, a cultural laboratory and an incubator of ideas. This laboratory isn’t reserved for academics alone – since 2007, the blank canvas that is Tankwa Town has offered a space to anyone that wishes to experiment, tinker, play or explore.
        \nThis year’s theme invites you to embrace the notion that what we co-create in the desert is an experiment.
    </string>
    <string name="about_theme_button_text">Theme website</string>
</resources>